Pull related posts and related projects out into templates; Adjust method of calling secondary page header templates to use 'with' syntax; Minor styling on approach page; Build out location/office entries;  Build out markup of post pagination structure; Build out people entries;  Combine minor page override styles into single '_pages.scss' partial

--- a/templates/approach/_service.html
+++ b/templates/approach/_service.html
@@ -5,11 +5,12 @@
 {% block content %}
 
   <article class="single-service" data-id="{{ category.id }}">
-    {% set header = {
-      image: category.serviceImage.one(),
-      title: category.title
-    } %}
-    {% include 'partials/_secondary-header' %}
+    {% include 'partials/_secondary-header'
+      with {
+        'headerImage': category.serviceImage.one(),
+        'headerTitle': category.title,
+      }
+    %}
 
     <!-- intro -->
     <div class="row -halves secondary-page-intro">
@@ -20,20 +21,6 @@
       </div>
     </div>
 
-    <h3>Featured {{ category.title }} Projects</h3>
-
-    {% for entry in craft.entries({
-      section: 'projects',
-      relatedTo: category,
-      with: [
-        'projectImage'
-      ]
-    }).all() %}
-      <a href="{{ entry.url }}">{{ entry.title }}</a>
-    {% endfor %}
-
-
-
     {% set relatedProjects = craft.entries({
       section: 'projects',
       relatedTo: category,
@@ -41,29 +28,12 @@
         'projectImage'
       ]
     }).all() %}
-    {{ dump(relatedProjects) }}
-    {% if relatedProjects|length %}
-      <div class="row -single margin-top">
-        <div class="row-block">
-          <div class="module text-module text-black">
-            <h3 class="font-h2">Featured {{ category.title }} Projects</h3>
-          </div>
-        </div>
-      </div>
-      <ul class="row -halves semantic-only-list">
-        {% for project in relatedProjects %}
-          <li class="row-block">
-            {% include 'projects/_article' %}
-          </li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-
-
-
-
-
-
+    {% include 'partials/_related-projects'
+      with {
+        'relatedProjects': relatedProjects,
+        'relatedProjectsTitle': "Featured #{ category.title } Projects",
+      }
+    %}
 
 
   </article>
