--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -37,6 +37,5 @@
 @import "components/user-content";
 
 // Pages
-@import "pages/impact";
-@import "pages/expertise";
+@import "pages/pages";
 @import "pages/awards";
