--- a/templates/partials/_pagination_structure.html
+++ b/templates/partials/_pagination_structure.html
@@ -7,13 +7,21 @@
   {% if not nextEntry %}
     {% set nextEntry = craft.entries.section(paginationSection).one() %}
   {% endif %}
-  <nav class="footer-pagination">
-    <ul>
-      <li class="prev">
-        <a rel="prev" href="{{ prevEntry.url }}"><span class="arrow">&larr;</span> Previous {{ postName }}<br>{{ prevEntry.title }}</a>
+  <nav class="entry-navigation">
+    <ul class="semantic-only-list row -halves -separators">
+      <li class="row-block bigclicky">
+        <article class="module pad prev-post">
+          <div class="text-red font-details no-margin">Previous {{ postName }}</div>
+          <h1 class="font-h2 post-title"><a href="{{ prevEntry.url }}" class="no-underline">{{ prevEntry.title }}</a></h1>
+          <svg class="icon icon-left-arrow"><use xlink:href="#icon-left-arrow" /></svg>
+        </article>
       </li>
-      <li class="next">
-        <a rel="next" href="{{ nextEntry.url }}">Next {{ postName }}<br>{{ nextEntry.title }} <span class="arrow">&rarr;</span></a>
+      <li class="row-block bigclicky">
+        <article class="module pad next-post">
+          <div class="text-red font-details  no-margin">Next {{ postName }}</div>
+          <h1 class="font-h2 post-title"><a href="{{ nextEntry.url }}" class="no-underline">{{ nextEntry.title }}</a></h1>
+          <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
+        </article>
       </li>
     </ul>
   </nav>
