--- a/web/assets/scss/components/_rows.scss
+++ b/web/assets/scss/components/_rows.scss
@@ -37,7 +37,7 @@
       @include media-md {
         flex-basis: 50%;
         width: 50%;
-        // max-width: 50%;
+        max-width: 50%;
       }
 
       &.-right {
@@ -49,7 +49,7 @@
       &.-double {
         @include media-md {
           flex-basis: 100%;
-          width: 100%;
+          max-width: 100%;
         }
       }
     }
