--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -14,6 +14,7 @@
 
   {% set title = category.title %}
   {% set subheader = category.description %}
+  {% set entry = craft.entries.section('peopleIndex').one() %}
 
 {% else %}
 
