--- a/web/assets/scss/components/_base.scss
+++ b/web/assets/scss/components/_base.scss
@@ -35,7 +35,7 @@ button {
   border: 0;
   outline: 0;
   appearance: none;
-  backgound: transparent;
+  background: transparent;
 }
 
 .svgs-defs {
