--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -35,6 +35,7 @@
 @import "components/entry-navigation";
 @import "components/meta";
 @import "components/user-content";
+@import "components/theater";
 
 // Pages
 @import "pages/pages";
