--- a/templates/partials/_media-blocks.html
+++ b/templates/partials/_media-blocks.html
@@ -1,5 +1,5 @@
 {% if entry.mediaBlocks|length %}
-<div class="row -halves -spaced background-white text-black">
+<div class="row -halves -spaced">
     {% for block in entry.mediaBlocks.all() %}
 
       {% set doubleWidth =
